Unit tests are added for Move Service Class